fix: increase z-index for header to prevent visual bug

--- a/src/pages/header-page/ui/HeaderPage.module.scss
+++ b/src/pages/header-page/ui/HeaderPage.module.scss
@@ -7,7 +7,7 @@
   height: 64px;
   padding: 8px;
   background-color: $primary-color;
-  z-index: 1;
+  z-index: 100;
 }
 
 .header {
